--- a/sample/src/main/res/values/strings.xml
+++ b/sample/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">ElmdroidProject</string>
+    <string name="basic_counter">Basic counter</string>
+    <string name="complex_login">Complex login</string>
+    <string name="complex_login_with_viewmodel">Complex login with ViewModel</string>
 </resources>
